--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>yup</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -9,23 +10,25 @@
     <style>
         body {
             margin: 0;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black;
+            background: black;
         }
+
         video {
-            transform: scale(0.7);
-            transform-origin: center;
-            max-height: 90vh; 
-            max-width: 90vw; 
+            width: 100vw;
+            height: 100vh;
+            object-fit: contain;
+            /* THIS is the key */
+            display: block;
         }
     </style>
+
 </head>
+
 <body>
-    <video width="648" height="1152" autoplay muted loop preload="auto">
+    <video autoplay muted loop playsinline preload="metadata">
         <source src="urmom.mp4" type="video/mp4">
     </video>
+
 </body>
+
 </html>
